# archivist

./: .gitignore  002-fix-file-aware-chat-runtime.patch  README.md  archivist-workbench-shell-v1.patch  archivist-workbench-shell-v2.patch  archivist-workbench-shell-v3.patch  archivist-workbench-shell-v4.patch  archivist-workbench-shell-v5.patch  archivist-workbench-shell-v6.patch  archivist-workbench-shell-v7.patch  archivist-workbench-shell-v8.patch  archivist-workbench-shell-v9.patch  chat-presentation-context.txt  devHandoff.md  package-lock.json  package.json
backend/: package.json  tsconfig.json
backend/src/: app.ts  index.ts  server.ts
backend/src/api/agents/controllers/: AgentController.ts
backend/src/api/agents/models/: Agent.ts  AgentDefaults.ts
backend/src/api/agents/routes/: AgentRoutes.ts
backend/src/api/agents/schemas/: AgentSchemas.ts
backend/src/api/agents/services/: AgentInstructionBuilder.ts
backend/src/api/agents/types/: AgentTypes.ts
backend/src/api/ai/controllers/: AIModelController.ts
backend/src/api/ai/routes/: AIModelRoutes.ts
backend/src/api/appState/controllers/: AppStateController.ts
backend/src/config/: env.ts
backend/src/core/ai/: AIProvider.ts  AIProviderRegistry.ts  ModelCatalog.ts  ModelDefinition.ts  ModelRegistry.ts
backend/src/database/: database.ts  migrations.ts
backend/src/errors/: app-error.ts
backend/src/middleware/: error-handler.ts
backend/src/scripts/: test-openai.ts
data/: archivist.db-shm  archivist.db-wal
frontend/: package.json  vite.config.ts
frontend/electron/: main.cjs  preload.cjs
frontend/src/: App.css  App.tsx  electron.d.ts  index.css  main.tsx
frontend/src/components/chat/: ChatWindow.module.css  ChatWindow.tsx
frontend/src/components/logo/: Logo.module.css  Logo.tsx
frontend/src/components/sidebar/: Sidebar.module.css  Sidebar.tsx
frontend/src/components/topbar/: Topbar.module.css  Topbar.tsx
frontend/src/components/workbench/: ArtifactDrawer.module.css  ChatPanelToolbar.module.css  ChatPanelToolbar.tsx  DockPlaceholder.module.css  WorkbenchCanvas.tsx  WorkbenchShell.module.css  WorkbenchShell.tsx
frontend/src/domains/agent/: agent.api.ts  agent.types.ts
frontend/src/domains/ai/: ai.api.ts  ai.types.ts
frontend/src/domains/chat/: chat.api.ts  chat.types.ts
frontend/src/domains/cognition/: contextCompiler.api.ts  contextCompiler.types.ts
frontend/src/styles/: modal.css  theme.ts
qt/: CMakeLists.txt
qt/qml/: App.qml
qt/qml/App/Files/: FileIdentity.js  RendererRegistry.js
qt/qml/App/Files/Renderers/: MarkdownRenderer.qml  PlainTextRenderer.qml
qt/qml/App/Theme/: Theme.qml
qt/qml/App/Topbar/: Topbar.qml
qt/qml/App/Topbar/CollectionEditor/: CollectionEditor.qml  CollectionMembershipCard.qml
qt/qml/App/Workbench/ArtifactDrawer/: ArtifactDrawer.qml
qt/qml/App/Workbench/ArtifactDrawer/ContextInspector/: ContextInspector.qml
qt/qml/App/Workbench/ChatDock/: ChatDock.qml
qt/qml/App/Workbench/ChatDock/AgentEditor/: AgentEditor.qml
qt/qml/App/Workbench/ChatDock/ChatAgentPicker/: ChatAgentPicker.qml
qt/qml/App/Workbench/ChatDock/ChatEditor/: ChatEditor.qml
qt/qml/App/Workbench/WorkbenchShell/: WorkbenchShell.qml
qt/qml/App/Workbench/WorkbenchShell/ActivityRail/: ActivityRail.qml
qt/qml/App/Workbench/WorkbenchShell/ActivityRail/RailButton/: RailButton.qml
qt/qml/App/Workbench/WorkbenchShell/ExplorerDock/: ExplorerDock.qml  WorkspaceDragSession.qml
qt/qml/App/Workbench/WorkbenchShell/ExplorerDock/ExplorerItem/: ExplorerItem.qml
qt/qml/App/Workbench/WorkbenchShell/ExplorerDock/WorkspaceNavigator/: ChatAgentRow.qml  ChatBand.qml  CollectionBand.qml  SidebarBandHeader.qml  WorkspaceNavigator.qml
qt/qml/App/Workbench/WorkbenchShell/ExplorerDock/WorkspaceNavigator/CollectionEditor/: ArchivedCollectionsSection.qml  CollectionEditorFooter.qml  CollectionEditorHeader.qml
qt/qml/App/Workbench/WorkbenchShell/StatusBar/: StatusBar.qml
qt/qml/App/Workbench/Workspace/: Workspace.qml
qt/qml/App/Workbench/Workspace/ChatMessage/: ChatMessage.qml  CodeBlock.qml  CometGlyph.qml  RichMessageContent.qml
qt/qml/App/Workbench/Workspace/EditorTabs/: EditorTabStrip.qml
qt/qml/App/Workbench/Workspace/FilePreview/: FilePreview.qml
qt/qml/App/Workbench/Workspace/JumpToLatestButton/: JumpToLatestButton.qml
qt/src/: main.cpp
qt/src/App/Domains/Agent/: agent_store.cpp  agent_store.h
qt/src/App/Domains/Chat/: chat_store.cpp  chat_store.h
qt/src/App/Domains/Collection/: collection_store.cpp  collection_store.h
qt/src/App/Domains/Files/: markdown_document_bridge.cpp  markdown_document_bridge.h
qt/src/App/Services/: workspace_state_store.cpp  workspace_state_store.h
scripts/: check-node-version.mjs  qt-build  qt-configure  qt-context  qt-dev  qt-run  qt-stop  test-chat-agent-rosters.mjs  test-collections.mjs  test-library-index.mjs
(+100 files in other folders)
